# kanji_sheet

./: Cargo.toml  README.org
assets/: all_kanji.txt
assets/js/: js.js
benches/: kanji_perf.rs
src/: arg_parsing.rs  lib.rs  main.rs  pages.rs  pdf_creation.rs  worker.rs
tests/: kanji_processing.rs
