[package]
name = "kanji_practice_sheet"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.23.14"
tiny-skia = "0.6.1"
resvg = "0.23.0"
usvg = "0.23.0"
xmlwriter = "0.1.0"
genpdf = { version = "0.2.0", features = ["images"] }
relm4 = "0.6.2"
open = "5.3.0"
anyhow = "1.0.90"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "kanji_perf"
harness = false

[[bin]]
name = "kanji_practice_sheet"
path = "src/main.rs"

[lib]
name = "kanji_practice_sheet"
path = "src/lib.rs"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 3
lto = "fat"
codegen-units = 1
